# django-typescript-postgres-boilerplate

./: docker-compose.yml
api/: Dockerfile  pyproject.toml
api/core/: admin.py  serializers.py  views.py
api/core/forms/: UserForms.py
api/core/mixins/: TimestampMixin.py
api/core/models/: User.py
api/new_app/: settings.py  urls.py
ui/: Dockerfile  package.json
